*******************************************************************************
Version 1.6.7
*******************************************************************************

2010-09-21 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Addition of WEB_SERVER_CONTENT_LANGUAGE parameter

	This patch adds the WEB_SERVER_CONTENT_LANGUAGE parameter so the user can specify
	the language used by the device during Description and Presentation steps of UPnP
	through the HTTP CONTENT-LANGUAGE header.
	By default, the WEB_SERVER_CONTENT_LANGUAGE is an empty string so no
	CONTENT-LANGUAGE is added.

2010-09-18 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Customize the stack size of the threads used by pupnp through the new THREAD_STACK_SIZE variable

	This patch allows a user to customize the stack size of the threads used by
	pupnp through the new THREAD_STACK_SIZE variable. This is especially useful
	on embedded systems with limited memory where the user can set THREAD_STACK_SIZE
	to ITHREAD_STACK_MIN.

	However, as this modification can have side effects, I set 0 as the default
	value, so threads will continue to use the default stack size of the system
	(which varies greatly as stated in
	https://computing.llnl.gov/tutorials/pthreads/).

2010-09-16 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Broken IPv6.
	IPv6 is currently broken in latest release of branch-1.6.x, so find a
	patch attached that correct the issue (small fixes on define, undef and
	retVal).

2010-09-10 Warwick Harvey <warwick.harvey(at)tieto.com>
	Patch to take notice of UPNP_USE_RWLOCK flag

	The configure.ac file included with UPnP checks for the presence of the
	pthread_rwlock_t type, and then sets the value of the UPNP_USE_RWLOCK
	flag appropriately.  However, this flag is not referenced at all in the
	source code, and thus the code does not compile on systems that don't
	have the pthread_rwlock_t type (such as Android).
	